Updated the version checker webstart update process to use a url from the jnlp file. Added working directory the the windows installer desktop shortcut. Updated the JNLP file with more options set. Added task to create the mac installer to the ant build script. Moved the properies setting location from the jnlp into the main class. Corrected and issue that prevented the application auto updating via webstart.